Final commit for 2nd final work

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="pages/aboutus.html">Sobre Nosotros</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contacto</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -263,7 +266,7 @@
                 </div>
             </div>
         </section>
-        <!-- Footer-->
+
         <footer class="footer-bg">
                 <a class="instagram" href="https://www.instagram.com/shogunate.shop/" target="_blank">
                     <img src="./img/Instagram_logo_2016.svg.webp" alt="Imagen instagram" height="70">
