--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,6 +66,7 @@
 				  <div class="form-group">
 				    <label for="exampleFormControlSelect1">Seleccion</label>
 				    <select class="form-control" id="exampleFormControlSelect1">
+                      <option>Seleccione el Motivo</option>
 				      <option>Queja</option>
 				      <option>Review</option>
 				      <option>Sugerencia</option>
